--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
             jvmTarget = JavaVersion.VERSION_1_8
         }
     }
+    buildFeatures {
+        dataBinding true
+    }
 }
 
 dependencies {
