--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,21 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    testBuildType = 'fortest'
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug{
+           buildConfigField 'String','URLBASE','"https://api.github.com/search/"'
+           buildConfigField 'String','DATABASENAME','"topk.db"'
+        }
+        fortest{
+            initWith(buildTypes.debug)
+            buildConfigField 'String','URLBASE','"https://api.github.com/mock/"'
+            buildConfigField 'String','DATABASENAME','"topk_test.db"'
         }
     }
     compileOptions {
@@ -35,37 +46,43 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.preference:preference:1.1.1'
-
-
-    testImplementation 'androidx.test:core:1.2.0'
-    testImplementation 'android.arch.core:core-testing:2.1.0'
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:3.1.0'
-    testImplementation "org.mockito:mockito-inline:3.1.0"
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
-
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation 'android.arch.core:core-testing:1.1.1'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
 
     def koin_version = "2.1.5"
     def room_version = "2.2.5"
     def lifecycle_version = "2.2.0"
     def retrofit_version = "2.9.0"
     def coroutines_version = "1.3.9"
-
     def okhttp3_version = "4.8.1"
     def glide_version = "4.11.0"
+
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.preference:preference:1.1.1'
+
+    // Junit
+    testImplementation 'junit:junit:4.13'
+
+    // Mockito
+    testImplementation 'org.mockito:mockito-core:3.1.0'
+    testImplementation "org.mockito:mockito-inline:3.1.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+
+    // Android test
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'android.arch.core:core-testing:2.1.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'android.arch.core:core-testing:1.1.1'
+    androidTestImplementation 'androidx.test:core-ktx:1.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+
+    // Espresso
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
@@ -96,13 +113,16 @@ dependencies {
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7'
 
+    // Lifecycle
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
 
-    //hdodenhof circleimageview
+    // hdodenhof circleimageview
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+
 }
