--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,31 +62,14 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.preference:preference:1.1.1'
 
-    // Junit
-    testImplementation 'junit:junit:4.13'
-
-    // Mockito
-    testImplementation 'org.mockito:mockito-core:3.1.0'
-    testImplementation "org.mockito:mockito-inline:3.1.0"
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
-
-    // Android test
-    testImplementation 'androidx.test:core:1.3.0'
-    testImplementation 'android.arch.core:core-testing:2.1.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'android.arch.core:core-testing:1.1.1'
-    androidTestImplementation 'androidx.test:core-ktx:1.3.0'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-
-    // Espresso
-    implementation "androidx.test.espresso:espresso-idling-resource:$espresso_Version"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_Version"
-    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_Version"
-
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // Lifecycle
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
@@ -94,10 +77,6 @@ dependencies {
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-
-    // Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // Koin for Kotlin apps
     implementation "org.koin:koin-android:$koin_version"
@@ -115,10 +94,31 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7'
 
+    // hdodenhof circleimageview
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
 
-    // hdodenhof circleimageview
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    // Junit
+    testImplementation 'junit:junit:4.13'
+
+    // Mockito
+    testImplementation 'org.mockito:mockito-core:3.1.0'
+    testImplementation "org.mockito:mockito-inline:3.1.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+
+    // Androidx test
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'android.arch.core:core-testing:2.1.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'android.arch.core:core-testing:1.1.1'
+    androidTestImplementation 'androidx.test:core-ktx:1.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+
+    // Espresso
+    implementation "androidx.test.espresso:espresso-idling-resource:$espresso_Version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_Version"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_Version"
 }
